feat: logout-forgot-password
