# src/api/authentication.ts
@@ -1,5 +1,5 @@
 import baseClient, { BASE_URL } from "./baseClient";
-import { AuthApiFactory } from "./openapi-generator";
+import { AuthApiFactory, ForgotPasswordRequest, UserRegister } from "./openapi-generator";
 
 const authApiFactory = AuthApiFactory(undefined, BASE_URL, baseClient);
 
@@ -7,8 +7,20 @@ export const login = (email: string, password: string) => {
   return authApiFactory.authLoginPost({ email, password });
 };
 export const logout = () => {
-  return authApiFactory.authLogoutPost();
+  return authApiFactory.authLogoutGet();
 };
 export const googleLogin = () => {
   return authApiFactory.apiMeGet()
+}
+export const register = (user: UserRegister) => {
+  return authApiFactory.authRegisterPost(user)
+}
+export const emailResetPassowrd = (email: string) => {
+  return authApiFactory.authEmailResetPasswordPost({email})
+}
+export const otpResetPassword = (otp: number) => {
+  return authApiFactory.authOtpResetPasswordPost({otp})
+}
+export const newPassword = (token: string, password: string) => {
+  return authApiFactory.authResetPasswordPost({token,password})
 }
